fix regulation mobile-layout

--- a/css/degree_regulation.css
+++ b/css/degree_regulation.css
@@ -145,8 +145,8 @@
 .file_title{
     color: #4f5ab8;
     font-weight: 500;
-    line-height: 1.94;
-    letter-spacing: 2.7px;
+    line-height: 1.5;
+    /*letter-spacing: 2.7px;*/
 }
 
 .en_text{
@@ -197,6 +197,8 @@ img.icon_download{
         font-size: 11px;
         letter-spacing: 1.35px;
     }
+
+    
 }
 
 @media (max-width: 768px) {
@@ -225,12 +227,15 @@ img.icon_download{
     }
 
     .link_block{
-        flex-direction: column;
-        align-items: flex-start;
+
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 1vw;
     }
 
     .others_regu_rows{
-        width: 70vw;
+        width: 100%;
     }
     
     .others_regu_rows > .link_block{
@@ -244,12 +249,13 @@ img.icon_download{
     }
 
     .item2{
-        width: 58vw
+        width: 100%;
+        flex-direction: column;
     }
 
     img.icon_download{
-        width: 7vw;
-        height: 4.5vw;
+        width: 10vw;
+        height: 7vw;
     }
 
     .regulation_block{
